fix overflow

--- a/nutrients-fanclub/src/components/Layout.css
+++ b/nutrients-fanclub/src/components/Layout.css
@@ -100,6 +100,12 @@
     margin-right: 20px; 
     background-color: #cccccc;
     padding: 5px;
+    max-width: 600px;
+  }
+
+  .reviews-content p {
+    word-wrap: break-word; 
+    overflow-wrap: break-word; 
   }
 
   .images-layout {
